--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://sdamion.github.io/tdsp/index.html">
-    <title>Redirecting...</title>
+  <title>The Dutch Stake Pool</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://sdamion.github.io/tdsp/index.html">click here</a>.</p>
+  <h1>The Dutch Stake Pool</h1>
+  <p>Underconstruction</p>
 </body>
 </html>
