--- a/test.html
+++ b/test.html
@@ -51,9 +51,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Modern Design</h1>
-        <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+        <h1>Welcome to The Dutch Stake Pool</h1>
+        <img src="tdsp_logo.webp" alt="Placeholder Image">
         <p>Experience simplicity and elegance with every detail. A design inspired by modern minimalism.</p>
     </div>
 </body>
-</html>
+</html
