--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #cfcec5;
+            background-color: #f5f5f7;
             color: #1d1d1f;
             overflow: hidden;
             margin: 0;
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo2.webp" alt="Placeholder Image">
+        <img src="tdsp_logo3.webp" alt="Placeholder Image">
         <p>Experience simplicity and elegance with every detail. A design inspired by modern minimalism.</p>
     </div>
 </body>
