--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>The Dutch Stake Pool</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Design</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #DDDEDB;
+            color: #1d1d1f;
+            overflow: hidden;
+            margin: 0;
+        }
+
+        .container {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        img {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+        }
+
+        p {
+            font-size: 1rem;
+            color: #6e6e73;
+            margin-bottom: 20px;
+        }
+
+        .links {
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+        }
+
+        .links a img {
+            width: 24px;
+            height: 24px;
+        }
+    </style>
 </head>
 <body>
-  <h1>The Dutch Stake Pool</h1>
-  <p>Underconstruction!!</p>
+    <div class="container">
+        <h1>Welcome to The Dutch Stake Pool</h1>
+        <img src="tdsp_logo3.png" alt="TDSP Logo">
+        <p>Dutch Bare-Metal low Fee stake pool.</p>
+        <div class="links">
+            <!-- Twitter Logo as a clickable link -->
+            <a href="https://twitter.com/DamionDutch" target="_blank">
+                <img src="X-logo.png" alt="Follow us on X">
+            </a>
+
+            <!-- Cardano DRep Logo as a clickable link -->
+            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank">
+                <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
