--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #f5f5f7;
+            background-color: #DDDEDB;
             color: #1d1d1f;
             overflow: hidden;
             margin: 0;
@@ -38,9 +38,6 @@
         img {
             width: 100%;
             max-width: 400px;
-            border-radius: 10px;
-            margin: 20px auto;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
         p {
@@ -52,8 +49,21 @@
 <body>
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo3.webp" alt="Placeholder Image">
-        <p>Experience simplicity and elegance with every detail. A design inspired by modern minimalism.</p>
+        <img src="tdsp_logo3.png">
+        <p>Dutch Bare Metal low Fee stake pool.</p>
+        
+        <div class="links">
+            <!-- Twitter Logo as a clickable link -->
+            <a href="https://twitter.com/DamionDutch" target="_blank">
+                <img src="X-logo.png" alt="Follow us on X" width="10" height="20">
+            </a>
+            
+            <!-- Cardano DRep Logo as a clickable link -->
+            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank">
+                <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID" width="10" height="10">
+            </a>
+        </div>
+
     </div>
 </body>
 </html
