add website logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dutch Stake Pool</title>
+    <title>Modern Design</title>
+    <link rel="icon" href="tdsp_logo3.png" type="image/png">
     <style>
         * {
             margin: 0;
@@ -42,7 +43,7 @@
         }
 
         p {
-            font-size: 2rem;
+            font-size: 1rem;
             color: #6e6e73;
             margin-bottom: 20px;
         }
@@ -50,7 +51,7 @@
         .links {
             display: flex;
             justify-content: center;
-            gap: 5px;
+            gap: 10px;
         }
 
         .links a img {
@@ -63,7 +64,8 @@
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
         <img src="tdsp_logo3.png" alt="TDSP Logo">
-        <p>Dutch Bare-Metal low Fee stake pool.</p>
+        <p>Dutch Bare Metal low Fee stake pool.</p>
+
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
             <a href="https://twitter.com/DamionDutch" target="_blank">
