--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
         <img src="tdsp_logo3.png" alt="TDSP Logo">
-        <p>Dutch Bare-Metal,low Fee stake pool. The one stop shop for Staking ($ADA and $IAG). If your looking for a DRep click on ADA logo below</p>
+        <p>Dutch Bare-Metal,low Fee stake pool. The one stop shop for Staking $ADA and $IAG. If your looking for a DRep click on ADA logo below</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
