--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Design</title>
+    <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
+    <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
+    <meta name="author" content="The Dutch Stake Pool">
+    <title>The Dutch Stake Pool</title>
     <link rel="icon" href="tdsp_logo3.png" type="image/png">
     <style>
         * {
@@ -13,7 +16,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, monospace;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -26,7 +29,7 @@
 
         .container {
             text-align: center;
-            max-width: 800px;
+            max-width: 90%;
             padding: 20px;
         }
 
@@ -57,6 +60,12 @@
         .links a img {
             width: 40px;
             height: 40px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .links a:hover img {
+            opacity: 0.8;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -64,16 +73,16 @@
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
         <img src="tdsp_logo3.png" alt="TDSP Logo">
-        <p>Dutch Bare-Metal,low Fee stake pool. The one stop shop for Staking $ADA and $IAG. If your looking for a DRep click on ADA logo below</p>
+        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
-            <a href="https://twitter.com/DamionDutch" target="_blank">
+            <a href="https://twitter.com/DamionDutch" target="_blank" aria-label="Follow us on X">
                 <img src="X-logo.png" alt="Follow us on X">
             </a>
 
             <!-- Cardano DRep Logo as a clickable link -->
-            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank">
+            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" aria-label="View DRep ID">
                 <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID">
             </a>
         </div>
