--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         img {
             width: 100%;
-            max-width: 100%;
+            max-width: 400px;
             height: auto;
         }
 
