--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #DDDEDB;
+            background-color: #EEEEEE;
             color: #1d1d1f;
             overflow: hidden;
             margin: 0;
@@ -41,7 +41,7 @@
 
         img {
             width: 100%;
-            max-width: 400px;
+            max-width: 600px;
             height: auto;
         }
 
