--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" aria-label="View DRep ID">
                 <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID">
             </a>
+
+            <!-- Join Stake pool clickable link -->
+            <a href="https://eternl.io/app/stake/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank">
+                <img src="tdsp-logo3.png" alt="Join Our Cardano Stake Pool" width="10" height="10">
+            </a>
         </div>
     </div>
 </body>
