--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
         <img src="tdsp_logo3.png" alt="TDSP Logo">
-        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
+        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG and if you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
@@ -88,7 +88,7 @@
 
             <!-- Join Stake pool clickable link -->
             <a href="https://eternl.io/app/stake/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank">
-                <img src="tdsp-logo3.png" alt="Join Our Cardano Stake Pool" width="10" height="10">
+                <img src="stakebutton.png" alt="Join Our Cardano Stake Pool" width="10" height="10">
             </a>
         </div>
     </div>
