--- a/test.html
+++ b/test.html
@@ -3,72 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Design</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #DDDEDB;
-            color: #1d1d1f;
-            overflow: hidden;
-            margin: 0;
-        }
-
-        .container {
-            text-align: center;
-            max-width: 600px;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            margin-bottom: 20px;
-        }
-
-        img {
-            width: 100%;
-            max-width: 400px;
-        }
-
-        p {
-            font-size: 1rem;
-            color: #6e6e73;
-        }
-    </style>
+    <title>GameChanger Wallet Connect</title>
+    <script src="https://cdn.jsdelivr.net/npm/@walletconnect/client@1.8.0/dist/umd/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emurgo/cardano-serialization-lib-browser"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo3.png">
-        <p>Dutch Bare Metal low Fee stake pool.</p>
-        
-        <div class="links">
-            <!-- Twitter Logo as a clickable link -->
-            <a href="https://twitter.com/DamionDutch" target="_blank">
-                <img src="X-logo.png" alt="Follow us on X" width="10" height="20">
-            </a>
-            
-            <!-- Cardano DRep Logo as a clickable link -->
-            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank">
-                <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID" width="10" height="10">
-            </a>
+    <h1>GameChanger Wallet Connect</h1>
+    <button id="connect-wallet">Connect Wallet</button>
+    <div id="wallet-info"></div>
 
-            <!-- Join Stake pool clickable link -->
-            <a href="https://eternl.io/app/stake/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank">
-                <img src="tdsp-logo3.png" alt="Join Our Cardano Stake Pool" width="10" height="10">
-            </a>
-        </div>
+    <script>
+        // WalletConnect and GameChanger Integration
+        const connectWalletButton = document.getElementById("connect-wallet");
+        const walletInfoDiv = document.getElementById("wallet-info");
 
-    </div>
+        let walletConnector;
+
+        connectWalletButton.addEventListener("click", async () => {
+            // Initialize WalletConnect
+            walletConnector = new WalletConnect.default({
+                bridge: "https://bridge.walletconnect.org", // Required bridge
+            });
+
+            // Check if already connected
+            if (!walletConnector.connected) {
+                // Create a new session
+                walletConnector.createSession();
+            }
+
+            // Subscribe to connection events
+            walletConnector.on("connect", (error, payload) => {
+                if (error) {
+                    console.error("Connection Error:", error);
+                    return;
+                }
+
+                // Get wallet info
+                const { accounts, chainId } = payload.params[0];
+                walletInfoDiv.innerHTML = `
+                    <p>Connected Wallet Address: ${accounts[0]}</p>
+                    <p>Connected Chain ID: ${chainId}</p>
+                `;
+            });
+
+            walletConnector.on("disconnect", (error, payload) => {
+                if (error) {
+                    console.error("Disconnection Error:", error);
+                    return;
+                }
+
+                walletInfoDiv.innerHTML = "<p>Wallet Disconnected</p>";
+            });
+
+            // Open WalletConnect QR modal
+            if (walletConnector.uri) {
+                window.open(`https://gamechanger.finance/connect/?uri=${encodeURIComponent(walletConnector.uri)}`, "_blank");
+            }
+        });
+    </script>
 </body>
-</html
+</html>
