--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <!-- Join Stake pool clickable link -->
             <a href="https://eternl.io/app/stake/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank">
-                <img src="stakebutton.png" alt="Join Our Cardano Stake Pool" width="10" height="10">
+                <img src="stakebutton.webp" alt="" width="10" height="10">
             </a>
         </div>
     </div>
