--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo3.png" alt="TDSP Logo">
+        <img src="tdsp_logo3.webp" alt="TDSP Logo">
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG and if you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
