--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
-    <title>The Dutch Stake Pool</title>
+    <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
     <link rel="icon" href="tdsp_logo3.png" type="image/png">
     <style>
         * {
@@ -16,7 +16,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, monospace;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -24,7 +24,6 @@
             background-color: #EEEEEE;
             color: #1d1d1f;
             overflow: hidden;
-            margin: 0;
         }
 
         .container {
@@ -54,7 +53,7 @@
         .links {
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: 20px;
         }
 
         .links a img {
@@ -67,28 +66,32 @@
             opacity: 0.8;
             transform: scale(1.1);
         }
+
+        .links a {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo3.webp" alt="TDSP Logo">
-        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG and if you're looking for a DRep, click on the ADA logo below.</p>
+        <img src="tdsp_logo3.webp" alt="The Dutch Stake Pool Logo">
+        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
-            <a href="https://twitter.com/DamionDutch" target="_blank" aria-label="Follow us on X">
-                <img src="X-logo.png" alt="Follow us on X">
+            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">
+                <img src="X-logo.webp" alt="Twitter Logo">
             </a>
 
             <!-- Cardano DRep Logo as a clickable link -->
-            <a href="https://cardanoscan.io/drep/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" aria-label="View DRep ID">
-                <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="View DRep ID">
+            <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View DRep ID">
+                <img src="cardano-ada-logo.webp" alt="Cardano DRep Logo">
             </a>
 
             <!-- Join Stake pool clickable link -->
-            <a href="https://eternl.io/app/stake/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank">
-                <img src="stakebutton.webp" alt="" width="10" height="10">
+            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join the Stake Pool">
+                <img src="stakebutton.webp" alt="Join Stake Pool Button">
             </a>
         </div>
     </div>
