change image names

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo3.png" type="image/png">
+    <link rel="icon" href="tdsp_logo3_ico.webp" type="image/png">
     <style>
         * {
             margin: 0;
@@ -81,17 +81,17 @@
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
             <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">
-                <img src="X-logo.webp" alt="Twitter Logo">
+                <img src="X-logo_ico.webp" alt="Twitter Logo">
             </a>
 
             <!-- Cardano DRep Logo as a clickable link -->
             <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View DRep ID">
-                <img src="cardano-ada-logo.webp" alt="Cardano DRep Logo">
+                <img src="cardano_logo_ico.webp" alt="Cardano DRep Logo">
             </a>
 
             <!-- Join Stake pool clickable link -->
             <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join the Stake Pool">
-                <img src="stakebutton.webp" alt="Join Stake Pool Button">
+                <img src="stakebutton_ico.webp" alt="Join Stake Pool Button">
             </a>
         </div>
     </div>
