--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo3_ico.webp" type="image/png">
+    <link rel="icon" href="tdsp_logo4.webp" type="image/png">
     <style>
         * {
             margin: 0;
@@ -34,6 +34,7 @@
 
         h1 {
             font-size: 3rem;
+            color: #FF6600;
             font-weight: 700;
             margin-bottom: 20px;
         }
@@ -46,7 +47,7 @@
 
         p {
             font-size: 1rem;
-            color: #6e6e73;
+            color: #000000;
             margin-bottom: 20px;
         }
 
@@ -75,7 +76,7 @@
 <body>
     <div class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo3.webp" alt="The Dutch Stake Pool Logo">
+        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo">
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
