--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         h1 {
             font-size: 3rem;
-            color: #FF6600;
+            color: #000000;
             font-weight: 700;
             margin-bottom: 20px;
         }
