--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="The Dutch Stake Pool | Reliable Cardano Staking">
+    <meta property="og:description" content="Join our Dutch Bare-Metal, low-fee stake pool for $ADA and $IAG. Discover a reliable DRep today.">
+    <meta property="og:image" content="tdsp_logo4.webp">
+    <meta property="og:url" content="https://www.thedutchstakepool.com">
+    <meta property="og:type" content="website">
+
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
     <link rel="icon" href="tdsp_logo4_ico.webp" type="image/png">
+
+    <!-- Preload Main Logo -->
+    <link rel="preload" href="tdsp_logo4.webp" as="image">
+
     <style>
         * {
             margin: 0;
@@ -37,6 +49,11 @@
             color: #000000;
             font-weight: 700;
             margin-bottom: 20px;
+            transition: color 0.3s ease-in-out;
+        }
+
+        h1:hover {
+            color: #555;
         }
 
         img {
@@ -49,6 +66,7 @@
             font-size: 1rem;
             color: #000000;
             margin-bottom: 20px;
+            line-height: 1.5;
         }
 
         .links {
@@ -71,30 +89,45 @@
         .links a {
             text-decoration: none;
         }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            .links a img {
+                width: 30px;
+                height: 30px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo">
+        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable and Low-Fee">
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
             <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">
-                <img src="X-logo_ico.webp" alt="Twitter Logo">
+                <img src="X-logo_ico.webp" alt="Twitter Logo - Follow us">
             </a>
 
             <!-- Cardano DRep Logo as a clickable link -->
             <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View DRep ID">
-                <img src="cardano_logo_ico.webp" alt="Cardano DRep Logo">
+                <img src="cardano_logo_ico.webp" alt="Cardano DRep Logo - View our ID">
             </a>
 
             <!-- Join Stake pool clickable link -->
             <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join the Stake Pool">
-                <img src="stakebutton_ico.webp" alt="Join Stake Pool Button">
+                <img src="stakebutton_ico.webp" alt="Join Stake Pool Button - Stake with us">
             </a>
         </div>
-    </div>
+    </main>
 </body>
 </html>
