--- a/test2.html
+++ b/test2.html
@@ -3,32 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stake with Eternl Wallet</title>
+    <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
+    <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
+    <meta name="author" content="The Dutch Stake Pool">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="The Dutch Stake Pool | Reliable Cardano Staking">
+    <meta property="og:description" content="Join our Dutch Bare-Metal, low-fee stake pool for $ADA and $IAG. Discover a reliable DRep today.">
+    <meta property="og:image" content="tdsp_logo4.webp">
+    <meta property="og:url" content="https://www.thedutchstakepool.com">
+    <meta property="og:type" content="website">
+
+    <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
+    <link rel="icon" href="tdsp_logo4_ico.webp" type="image/png">
+
+    <!-- Preload Main Logo -->
+    <link rel="preload" href="tdsp_logo4.webp" as="image">
+
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #EEEEEE;
+            color: #1d1d1f;
+            overflow: hidden;
+        }
+
+        .container {
             text-align: center;
-            margin-top: 50px;
+            max-width: 90%;
+            padding: 20px;
         }
-        .button {
-            background-color: #2D73D2;
-            color: white;
-            padding: 15px 25px;
+
+        h1 {
+            font-size: 3rem;
+            color: #000000;
+            font-weight: 700;
+            margin-bottom: 20px;
+            transition: color 0.3s ease-in-out;
+        }
+
+        h1:hover {
+            color: #555;
+        }
+
+        img {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+        }
+
+        p {
+            font-size: 1rem;
+            color: #000000;
+            margin-bottom: 20px;
+            line-height: 1.5;
+        }
+
+        .links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .links a img {
+            width: 40px;
+            height: 40px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .links a:hover img {
+            opacity: 0.8;
+            transform: scale(1.1);
+        }
+
+        .links a {
             text-decoration: none;
-            font-size: 18px;
-            border-radius: 5px;
-            display: inline-block;
         }
-        .button:hover {
-            background-color: #1B4B9C;
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            .links a img {
+                width: 30px;
+                height: 30px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Stake to Our Cardano Pool</h1>
-    <p>Click the button below to open Eternl Wallet’s web interface and stake directly:</p>
-    <a href="https://eternl.io/stake?pool=b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" class="button" target="_blank">Stake Now with Eternl</a>
-    <p>Not using Eternl? Copy the pool ID and stake using your favorite wallet:</p>
-    <p>Pool ID: <code>b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea</code></p>
+    <main class="container">
+        <h1>Welcome to The Dutch Stake Pool</h1>
+        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable and Low-Fee">
+        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
+
+        <div class="links">
+            <!-- Twitter Logo as a clickable link -->
+            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">
+                <img src="X-logo_ico.webp" alt="Twitter Logo - Follow us">
+            </a>
+
+            <!-- Cardano DRep Logo as a clickable link -->
+            <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View DRep ID">
+                <img src="cardano_logo_ico.webp" alt="Cardano DRep Logo - View our ID">
+            </a>
+
+            <!-- Join Stake pool clickable link -->
+            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join the Stake Pool">
+                <img src="stakebutton_ico.webp" alt="Join Stake Pool Button - Stake with us">
+            </a>
+        </div>
+    </main>
 </body>
 </html>
