--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
 
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo4_ico.webp" type="image/png">
+    <link rel="icon" href="tdsp_logo4_ico.webp" type="image/webp">
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo4.webp" as="image">
@@ -27,8 +27,11 @@
             box-sizing: border-box;
         }
 
-        body {
+        body, h1, p {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+        }
+
+        body {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -90,6 +93,54 @@
             text-decoration: none;
         }
 
+        a:focus {
+            outline: 2px solid #555;
+            outline-offset: 2px;
+        }
+
+        .skip-link {
+            position: absolute;
+            top: -40px;
+            left: 0;
+            background: #000;
+            color: #fff;
+            padding: 8px;
+            z-index: 100;
+            transition: top 0.3s ease;
+        }
+
+        .skip-link:focus {
+            top: 0;
+        }
+
+        #back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #000;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: none;
+            cursor: pointer;
+        }
+
+        #back-to-top:focus {
+            outline: 2px solid #fff;
+        }
+
+        @media (prefers-color-scheme: light) {
+            body {
+                background-color: #1d1d1f;
+                color: #ffffff;
+            }
+            h1 {
+                color: #ffffff;
+            }
+        }
+
         @media (max-width: 480px) {
             h1 {
                 font-size: 2rem;
@@ -105,29 +156,56 @@
             }
         }
     </style>
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "The Dutch Stake Pool",
+        "url": "https://www.thedutchstakepool.com",
+        "logo": "tdsp_logo4.webp",
+        "sameAs": [
+            "https://twitter.com/DamionDutch",
+            "https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl",
+            "https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea"
+        ]
+    }
+    </script>
 </head>
 <body>
-    <main class="container">
+    <a href="#main-content" class="skip-link">Skip to content</a>
+    <main class="container" id="main-content">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable and Low-Fee">
+        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" width="600" height="auto">
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
         <div class="links">
             <!-- Twitter Logo as a clickable link -->
-            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">
-                <img src="X-logo_ico.webp" alt="Twitter Logo - Follow us">
+            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
+                <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" loading="lazy">
             </a>
 
             <!-- Cardano DRep Logo as a clickable link -->
-            <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View DRep ID">
-                <img src="cardano_logo_ico.webp" alt="Cardano DRep Logo - View our ID">
+            <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View The Dutch Stake Pool's DRep ID">
+                <img src="cardano_logo_ico.webp" alt="View The Dutch Stake Pool's DRep ID" loading="lazy">
             </a>
 
             <!-- Join Stake pool clickable link -->
-            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join the Stake Pool">
-                <img src="stakebutton_ico.webp" alt="Join Stake Pool Button - Stake with us">
+            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
+                <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" loading="lazy">
             </a>
         </div>
     </main>
+    <button id="back-to-top" aria-label="Back to top">&uarr;</button>
+    <script>
+        const backToTopButton = document.getElementById('back-to-top');
+        window.addEventListener('scroll', () => {
+            backToTopButton.style.display = window.scrollY > 200 ? 'block' : 'none';
+        });
+        backToTopButton.addEventListener('click', () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+    </script>
 </body>
 </html>
