added a second page with info about the stake pool

--- a/details.html
+++ b/details.html
@@ -13,17 +13,45 @@
 
         <section>
             <h2>Stake Pool Operator</h2>
-            <p>Learn about the passionate operator behind The Dutch Stake Pool, dedicated to providing secure and reliable staking services.</p>
+            <p>My name is Damion Seedorf, and I hold a Bachelor's degree in Information Technology. With 19 years of experience as an IT consultant, I have specialized as a DevOps engineer, focusing on building and maintaining robust IT infrastructures.
+
+                In the blockchain space, I bring extensive experience, having successfully managed a mining farm with 22 GPUs dedicated to Ethereum mining. This hands-on expertise in resource management, hardware optimization, and blockchain technology positions me well for operating a stake pool.
+                
+                Additionally, I am an active contributor to the Cardano ecosystem. As a Cardano DRep, I represent stakeholders and help drive decentralized decision-making. I also had the honor of serving as a delegate at the Cardano Constitutional Convention, contributing to shaping the future of governance within the ecosystem.
+                
+                I am passionate about blending my IT expertise and blockchain experience to strengthen and support decentralized networks.</p>
         </section>
 
         <section>
             <h2>Stake Pool Hardware</h2>
             <p>Our bare-metal servers are optimized for maximum uptime and performance, ensuring your staking rewards are always on point.</p>
+            <strong>Hardware Server 1</strong><br>
+                HP Z440<br>
+                Intel XEON E5-2660 v4<br>
+                192GB Memory<br>
+                11TB HDD 5 disks on is a parity disk<br>
+                Blockproducer Node1 and Relay Node1 in 2 VMs<br>
+                Option for Adding Disks for a second Iagon Node and partner chains<br>
+                <p></p>
+            <strong>Hardware Server 2</strong><br>
+                Asrock B550<br>
+                AMD Ryzen 5 5600G<br>
+                128GB Memory<br>
+                47TB HDD RAID5<br>
+                Relay Node2 and Iagon Storage Node1<br>
+                Option for adding more storage space for Iagon and adding partner chains<br>
+                <p></p>
+            <strong>Network</strong><br>
+                Bussiness fibre Internet <br>
+
+            <p></p>
         </section>
 
         <section>
             <h2>Other Staking Options</h2>
-            <p>Discover alternative staking options that suit your needs, including $ADA and $IAG staking opportunities.</p>
+            When Iagon activates parner staking you can stake your Iagon token to my Iagon node. I will do a 25/75 to 30/70 split<br>
+            I will also be a partner Chain stake Pool
+            <p></p>
         </section>
 
         <a href="index.html">Back to Home</a>
