remove style on index using stylesheet file

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo4.webp" as="image">
-
-    <style>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
         * {
             margin: 0;
             padding: 0;
@@ -128,7 +128,7 @@
                 height: 30px;
             }
         }
-    </style>
+    </style> -->
 
     <script>
         function goToDetails() {
