--- a/details.html
+++ b/details.html
@@ -24,34 +24,55 @@
 
         <section>
             <h2>Stake Pool Hardware</h2>
-            <p>Our bare-metal servers are optimized for maximum uptime and performance, ensuring your staking rewards are always on point.</p>
-            <strong>Hardware Server 1</strong><br>
-                HP Z440<br>
-                Intel XEON E5-2660 v4<br>
-                192GB Memory<br>
-                11TB HDD 5 disks on is a parity disk<br>
-                Blockproducer Node1 and Relay Node1 in 2 VMs<br>
-                Option for Adding Disks for a second Iagon Node and partner chains<br>
-                <p></p>
-            <strong>Hardware Server 2</strong><br>
-                Asrock B550<br>
-                AMD Ryzen 5 5600G<br>
-                128GB Memory<br>
-                47TB HDD RAID5<br>
-                Relay Node2 and Iagon Storage Node1<br>
-                Option for adding more storage space for Iagon and adding partner chains<br>
-                <p></p>
-            <strong>Network</strong><br>
-                Bussiness fibre Internet <br>
+            <div>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Server</th>
+                        <th>Specifications</th>
+                        <th>Usage</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>1</strong></td>
+                        <td>
+                            HP Z440<br>
+                            Intel XEON E5-2660 v4<br>
+                            192GB Memory<br>
+                            11TB HDD (5 disks, 1 parity disk)<br>
+                        </td>
+                        <td>
+                            Blockproducer Node1 and Relay Node1 (in 2 VMs)
+                            Option for adding disks for a second Iagon Node and partner chains
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>2</strong></td>
+                        <td>
+                            Asrock B550<br>
+                            AMD Ryzen 5 5600G<br>
+                            128GB Memory<br>
+                            47TB HDD (RAID5)<br>
+                        </td>
+                        <td>
+                            Relay Node2 and Iagon Storage Node1
+                            Option for adding more storage space for Iagon and partner chains
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+            <h2>Network</h2>
+                <p>Bussiness fibre Internet</p>
 
-            <p></p>
         </section>
 
         <section>
             <h2>Other Staking Options</h2>
-            When Iagon activates parner staking you can stake your Iagon token to my Iagon node. I will do a 25/75 to 30/70 split<br>
-            I will also be a partner Chain stake Pool
-            <p></p>
+            <p>When Iagon activates parner staking you can stake your Iagon token to my Iagon node. I will do a 25/75 to 30/70 split.<br>
+            I will also be a partner Chain Node/Stake Pool.
+            </p>
         </section>
 
         <a href="index.html">Back to Home</a>
