--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <meta property="og:url" content="https://www.thedutchstakepool.com">
     <meta property="og:type" content="website">
 
+    <!-- Web App Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="The Dutch Stake Pool">
+    <meta name="apple-mobile-web-app-title" content="The Dutch Stake Pool">
+    <meta name="theme-color" content="#b0adad">
+    <meta name="msapplication-navbutton-color" content="#b0adad">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <link rel="icon" sizes="192x192" href="tdsp_logo4_ico.webp">
+    <link rel="apple-touch-icon" href="tdsp_logo4_ico.webp">
+    <link rel="manifest" href="manifest.json">
+
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
     <link rel="icon" href="tdsp_logo4_ico.webp" type="image/webp">
 
