--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
                 <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
             </a>
+
+            <!-- Stake to my iagon node -->
+            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                <img src="iagonLogoLight2.webp" alt="Join The Iagon Node">
+            </a>
+
         </div>
     </main>
 </body>
