--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </a>
 
             <!-- Stake to my iagon node -->
-            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+            <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
                 <img src="iagonLogoLight2.webp" alt="Join The Iagon Node">
             </a>
 
