--- a/details.html
+++ b/details.html
@@ -19,55 +19,32 @@
                 
                 Additionally, I am an active contributor to the Cardano ecosystem. As a Cardano DRep, I represent stakeholders and help drive decentralized decision-making. I also had the honor of serving as a delegate at the Cardano Constitutional Convention, contributing to shaping the future of governance within the ecosystem.
                 
-                I am passionate about blending my IT expertise and blockchain experience to strengthen and support decentralized networks.</p>
+                I am passionate about blending my IT expertise and blockchain experience to strengthen and support decentralized networks.</p><br>
         </section>
 
         <section>
             <h2>Stake Pool Hardware</h2>
-            <div>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Server</th>
-                        <th>Specifications</th>
-                        <th>Usage</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><strong>1</strong></td>
-                        <td>
-                            HP Z440<br>
-                            Intel XEON E5-2660 v4<br>
-                            192GB Memory<br>
-                            11TB HDD (5 disks, 1 parity disk)<br>
-                        </td>
-                        <td>
-                            Blockproducer Node1 and Relay Node1 (in 2 VMs)
-                            Option for adding disks for a second Iagon Node and partner chains
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><strong>2</strong></td>
-                        <td>
-                            Asrock B550<br>
-                            AMD Ryzen 5 5600G<br>
-                            128GB Memory<br>
-                            47TB HDD (RAID5)<br>
-                        </td>
-                        <td>
-                            Relay Node2 and Iagon Storage Node1
-                            Option for adding more storage space for Iagon and partner chains
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            </div>
-            <h2>Network</h2>
-                <p>Bussiness fibre Internet</p>
-
+            <p2>
+            <strong>Server 1</strong><br>
+                HP Z440<br>
+                Intel XEON E5-2660 v4<br>
+                192GB Memory<br>
+                11TB HDD (5 disks, 1 parity disk)<br>
+                Blockproducer Node1 and Relay Node1 (in 2 VMs)<br>
+                Option for adding disks for a second Iagon Node and partner chains<br>
+                <br>
+            <strong>Server 2</strong><br>
+                Asrock B550<br>
+                AMD Ryzen 5 5600G<br>
+                128GB Memory<br>
+                47TB HDD (RAID5)<br>
+                Relay Node2 and Iagon Storage Node1<br>
+                Option for adding more storage space for Iagon and partner chains<br>
+                <br>
+                <strong>Network</strong><br>
+                Bussiness fibre Internet</p2>
         </section>
-
+        <br><br>
         <section>
             <h2>Other Staking Options</h2>
             <p>When Iagon activates parner staking you can stake your Iagon token to my Iagon node. I will do a 25/75 to 30/70 split.<br>
@@ -75,7 +52,10 @@
             </p>
         </section>
 
-        <a href="index.html">Back to Home</a>
+            <!-- Back to o the home page -->
+            <a href="index.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                <img src="tdsp_logo4.webp" alt="Join The Iagon Node">
+            </a>
     </main>
 </body>
 </html>
