--- a/details.html
+++ b/details.html
@@ -54,7 +54,8 @@
 
             <!-- Back to o the home page -->
             <a href="index.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                <img src="tdsp_logo4.webp" alt="Join The Iagon Node">
+            <img src="tdsp_logo4.webp" alt="Join The Iagon Node" width="10px" height="10px">
+
             </a>
     </main>
 </body>
