--- a/details.html
+++ b/details.html
@@ -51,12 +51,11 @@
             I will also be a partner Chain Node/Stake Pool.
             </p>
         </section>
-
+        <div class="links">
             <!-- Back to o the home page -->
             <a href="index.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-            <img src="tdsp_logo4.webp" alt="Join The Iagon Node" width="10px" height="10px">
-
-            </a>
+            <img src="tdsp_logo4.webp" alt="Join The Iagon Node"></a>
+        </div>
     </main>
 </body>
 </html>
